<resources>
    <string name="app_name">SSH Connect</string>
    <string name="action_settings">Settings</string>
    <string name="hostname">Hostname</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_execute">Execute</string>
    <string name="title_activity_login">SSH Connect</string>

</resources>
